feat: support Java 11